# microsoft-365-agents-toolkit

./: .dockerignore  .gitignore  .waza.yaml  CHANGELOG.md  CHERRY_PICK_ANALYSIS.md  CHERRY_PICK_STATUS.md  CHERRY_PICK_SUMMARY.md  CONTRIBUTING.md  PROJECT_HEALTH_REPORT.md  README.md  README_CHERRY_PICK.md  ROADMAP.md  TEST_CHERRY_PICK.md  governmentpea.md  microsoft-365-agents-toolkit.sln  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.azure-pipelines/: apiscan.yml
.dev/: features.json  features.schema.json
.dev/plans/: 2026-03-27-full-stack-refactor.md  (+5 more)
.github/: CODEOWNERS  copilot-instructions.md  sync-state.json  vuln-fix-todo.md
docs/: README.md  release-automation-setup.md  release-schedule.md  template-dependency-analysis.md
scripts/: build-docker-local-cli.ps1  local-test.js  post_issue_comment.py  upload_gif_to_issue.py
templates/: .eslintrc.js  CONTRIBUTION.md  eslint.config.mjs  package.json  pnpm-lock.yaml
templates/vsc/python/default-bot/: .gitignore.tpl  .webappignore  README.md  README.md.tpl  m365agents.local.yml.tpl  m365agents.playground.yml  m365agents.playground.yml.tpl  m365agents.yml.tpl  package.json.tpl  pyproject.toml  requirements.txt  web.config
templates/vsc/python/default-bot/appPackage/: manifest.json.tpl
templates/vsc/python/default-bot/env/: .env.dev  .env.local  .env.sandbox
templates/vsc/python/default-bot/infra/: azure.bicep  azure.bicep.tpl  azure.parameters.json.tpl
templates/vsc/python/default-bot/src/: app.py  bot.py  config.py  main.py  requirements.txt
test-plans/: README.md  template.md
(+1956 files in other folders)
